--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/batch-processingdb
+spring.datasource.username=postgres
+spring.datasource.password=
 
+spring.datasource.initialization-mode=never
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.jpa.show-sql=true
